assets/css/webInterface.css
/*********************EMOJIS*************************/

.emojisDropdown {
	width: 250px;
}

.emojisDropdown.dropdown-menu {
	padding: 0
}

.emojisDropdown .nav {
	margin: 0
}

.emojisDropdown .nav-tabs li a {
	margin: 0;
	padding: 5px;
}

.emojisDropdown .tab-content {
	padding-top: 5px;
}

.emojisDropdown .emojisDropdownContainer {
	white-space: normal;
	max-height: 100px;
	overflow-y: scroll
}

.emojisDropdown .emojisDropdownContainer .emojisDropdownItems {
	display: inline-block;
	/*	padding:3px;*/
	text-align: center;
	vertical-align: middle;
	position: relative;
	width: 50px;
	height: 50px;
	margin: 3px;
}

.emojisDropdown .emojisDropdownContainer .emojisDropdownItems:before {
	content: ' ';
	display: inline-block;
	vertical-align: middle;
	/* vertical alignment of the inline element */
	height: 100%;
}

.emojisDropdown .emojisDropdownContainer .emojisDropdownItems:hover {
	background-color: #496266;
	border-radius: 3px;
	cursor: pointer
}

.emojisDropdown .emojisDropdownItems img {
	width: auto;
	height: auto;
	display: inline-block;
}

.emojisDropdown .emojiFooter {
	font-size: 10px;
	text-align: center;
}

.emojisDropdown .customEmojiInput {
	width: 165px;
	font-size: 10px;
	padding: 0 5px;
	margin-left: 5px;
}

.emojisDropdown #customEmojis button {
	margin-left: 5px;
}

.emojisDropdown .customEmojiBtnImage {
	padding: 0;
	margin: 0;
	vertical-align: middle;
	display: block;
}

.emojisDropdown .customEmojis .removeEmoji {
	background-color: #b9b3b3;
	border-radius: 50%;
	position: absolute;
	font-size: 10px;
	right: 0px;
	padding-left: 1px;
	color: #da1616;
	top: 0px;
	border: 1px solid #867c7c;
}


/*********************LOADING MESSAGE************************/

.loadingText {
	text-align: center;
}

.emojisDropdown .sk-circle {
	margin: 0px auto;
	width: 40px;
	height: 40px;
	position: relative;
}

.emojisDropdown .sk-circle .sk-child {
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
}

.emojisDropdown .sk-circle .sk-child:before {
	content: '';
	display: block;
	margin: 0 auto;
	width: 15%;
	height: 15%;
	background-color: #ccc;
	border-radius: 100%;
	-webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
	animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
}

.emojisDropdown .sk-circle .sk-circle2 {
	-webkit-transform: rotate(30deg);
	-ms-transform: rotate(30deg);
	transform: rotate(30deg);
}

.emojisDropdown .sk-circle .sk-circle3 {
	-webkit-transform: rotate(60deg);
	-ms-transform: rotate(60deg);
	transform: rotate(60deg);
}

.emojisDropdown .sk-circle .sk-circle4 {
	-webkit-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	transform: rotate(90deg);
}

.emojisDropdown .sk-circle .sk-circle5 {
	-webkit-transform: rotate(120deg);
	-ms-transform: rotate(120deg);
	transform: rotate(120deg);
}

.emojisDropdown .sk-circle .sk-circle6 {
	-webkit-transform: rotate(150deg);
	-ms-transform: rotate(150deg);
	transform: rotate(150deg);
}

.emojisDropdown .sk-circle .sk-circle7 {
	-webkit-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	transform: rotate(180deg);
}

.emojisDropdown .sk-circle .sk-circle8 {
	-webkit-transform: rotate(210deg);
	-ms-transform: rotate(210deg);
	transform: rotate(210deg);
}

.emojisDropdown .sk-circle .sk-circle9 {
	-webkit-transform: rotate(240deg);
	-ms-transform: rotate(240deg);
	transform: rotate(240deg);
}

.emojisDropdown .sk-circle .sk-circle10 {
	-webkit-transform: rotate(270deg);
	-ms-transform: rotate(270deg);
	transform: rotate(270deg);
}

.emojisDropdown .sk-circle .sk-circle11 {
	-webkit-transform: rotate(300deg);
	-ms-transform: rotate(300deg);
	transform: rotate(300deg);
}

.emojisDropdown .sk-circle .sk-circle12 {
	-webkit-transform: rotate(330deg);
	-ms-transform: rotate(330deg);
	transform: rotate(330deg);
}

.emojisDropdown .sk-circle .sk-circle2:before {
	-webkit-animation-delay: -1.1s;
	animation-delay: -1.1s;
}

.emojisDropdown .sk-circle .sk-circle3:before {
	-webkit-animation-delay: -1s;
	animation-delay: -1s;
}

.emojisDropdown .sk-circle .sk-circle4:before {
	-webkit-animation-delay: -0.9s;
	animation-delay: -0.9s;
}

.emojisDropdown .sk-circle .sk-circle5:before {
	-webkit-animation-delay: -0.8s;
	animation-delay: -0.8s;
}

.emojisDropdown .sk-circle .sk-circle6:before {
	-webkit-animation-delay: -0.7s;
	animation-delay: -0.7s;
}

.emojisDropdown .sk-circle .sk-circle7:before {
	-webkit-animation-delay: -0.6s;
	animation-delay: -0.6s;
}

.emojisDropdown .sk-circle .sk-circle8:before {
	-webkit-animation-delay: -0.5s;
	animation-delay: -0.5s;
}

.emojisDropdown .sk-circle .sk-circle9:before {
	-webkit-animation-delay: -0.4s;
	animation-delay: -0.4s;
}

.emojisDropdown .sk-circle .sk-circle10:before {
	-webkit-animation-delay: -0.3s;
	animation-delay: -0.3s;
}

.emojisDropdown .sk-circle .sk-circle11:before {
	-webkit-animation-delay: -0.2s;
	animation-delay: -0.2s;
}

.emojisDropdown .sk-circle .sk-circle12:before {
	-webkit-animation-delay: -0.1s;
	animation-delay: -0.1s;
}

@-webkit-keyframes sk-circleBounceDelay {
	0%,
	80%,
	100% {
		-webkit-transform: scale(0);
		transform: scale(0);
	}
	40% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
}

@keyframes sk-circleBounceDelay {
	0%,
	80%,
	100% {
		-webkit-transform: scale(0);
		transform: scale(0);
	}
	40% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
}


/****************************PAYPAL*********************/

.pandaSalute {
	cursor: pointer;
	padding-bottom: 40px;
	margin-top: -40px;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

#paypalModal {
	display: none
}

.paypalModalTitle {
	text-align: center;
	display: block;
	font-size: 18px;
}

#paypalDonateBtn {
	display: inline-block;
	margin-left: 15px;
}

